--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@ai-sdk/google": "^2.0.44",
     "@ai-sdk/react": "^2.0.106",
     "@supabase/supabase-js": "^2.86.0",
-    "@tailwindcss/vite": "^4.1.17",
+    "@tailwindcss/postcss": "^4.1.17",
     "@vercel/postgres": "^0.10.0",
     "ai": "^5.0.106",
     "framer-motion": "^12.23.25",
